--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ body{
 h1,h2,h3,h4,h5,h6{
     font-family: 'Oswald', sans-serif; font-weight: 500;
 }  
+section{
+    padding: 80px 0px;
+}
 .topBarMain {
         background: #f5f5f5;
  }
@@ -48,17 +51,16 @@ h1,h2,h3,h4,h5,h6{
     color: #2b2b2b;
 }
 .social i:hover{
-    color: #ff5200;
-
+ color: #fb5200;
 }
 .social a:first-child {
    border-left: 1px solid #ddd;
 }
 .phone i{
-    color: #ff5200;
+    color:black;
 }
 .email i{
-   color: #ff5200;
+   color:black;
 }
 
 .primaryWrapper {
@@ -88,13 +90,513 @@ a {
     text-decoration: none;
     font-family: oswald;
     text-transform: uppercase;
-    font-size: 16px;
+    font-size: 15px;
     display: block;
-    padding: 30px 15px;
+    padding: 30px 30px;
     color: #0e0e0e;
     font-weight: 500;
     transition: 0.5s;
 }
 ul.mainMenuItem li a:hover{
-    color: #ff5200;
+ color: #fb5200;
+ 
+}
+#homeSlider{
+    background: url(https://i.pinimg.com/originals/10/80/75/1080754f23f39f15f649bfb2d9dc42d3.jpg);
+    background-repeat: no-repeat;
+    background-position: 100%;
+    padding: 0;
+}
+.sliderContent {
+    color: rgb(10, 10, 10);
+    width: 600px;
+}
+
+.sliderContent h1 {
+    font-size: 50px;
+    font-weight: 700;
+    text-align: uppercase;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+    margin-top: 120px;
+    float: left;
+}
+
+.sliderContent p {
+    font-weight: 600;
+    line-height: 25px;
+    width: 490px;
+    margin-bottom: 30px;
+}
+
+#sliderWorkButton {
+    background: rgb(39, 12, 12);
+    color: white;
+    border: none;
+    padding: 15px 30px;
+    font-size: 16px;
+    font-weight: 600;
+    border-radius: 3px;
+    margin-bottom: 120px;
+    transition: 0.39s;
+    cursor: pointer;
+}
+#sliderWorkButton:hover{
+ color: #fb5200;
+ transition: 0.7s; 
+}
+.sliderNav {
+    width: 60px;
+    margin: auto;
+    padding: 40px 0px;
+}
+
+.sliderNav span {
+    width: 10px;
+    height: 10px;
+    background: transparent;
+    border: 4px solid rgb(39, 12, 12);
+    display: block;
+    border-radius: 100%;
+    cursor: pointer;
+    float: left;
+    margin: 5px 5px;
+}
+.sliderNav span:last-child{
+    background: rgb(39, 12, 12);
+    border-color: rgb(39, 12, 12);
+}
+#services{
+    background-color:whitesmoke;
+}
+
+.sboxWrapper {
+    overflow: hidden;
+}
+
+.singleBox {
+    width: 225px;
+    background: rgb(246, 248, 248);
+    padding: 15px;
+    float: left;
+    margin-right: 30px;
+}
+.singleBox:hover{
+      background: skyblue;
+      color: rgb(51, 49, 49) !important;
+      cursor: pointer;
+}
+.singleBox:hover h2, i{
+     color:rgb(51, 49, 49);
+}
+.singleBox:hover .sboxLink{
+    color: rgb(51, 49, 49) !important;
+}
+.sboxTitle {
+    text-align: center;
+    width: 150px;
+    margin: auto;
+}
+.sboxTitle h2 {
+    font-size: 20px;
+    letter-spacing: -1.5px;
+    color: #333;
+    line-height: 28px;
+    text-transform: uppercase;
+    margin: 25px 0px;
+}
+.sboxIcon {
+    text-align: center;
+    font-size: 40px;
+    color: #fb5200;
+    margin: 30px 0px;
+}
+.sboxDesc {
+    text-align: 25px 0px;
+    text-align: center;
+    margin: 30px 0px;
+}
+.sboxLink {
+    text-align: center;
+    margin: 30px 0px;
+}
+.sboxLink a {
+    text-decoration: none;
+    color: rgb(39, 12, 12);
+    font-weight: 500; 
+}
+
+.teamContents {
+    overflow: hidden;
+}
+.teamImage img{
+    width: 550px;
+    float: left;
+    height: 535px;
+}
+.teamImage{
+    max-width: 100%;
+}
+.teamDetails {
+    width: 535px;
+    float: right;
+}
+.titleDesc h2 {
+    font-size: 40px;
+    margin-bottom: 10px;
+}
+.titleDesc p {
+    color: #666;
+    line-height: 25px;
+    margin-bottom: 15px;
+}
+.teamFacilities ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    width: 260px;
+    float: left;
+
+}
+.teamFacilities ul li{
+      line-height: none;
+      transition: 0.3s;
+}
+.teamFacilities ul li a{
+    color: rgb(39, 37, 37);
+    text-decoration: none;
+    font-weight: 500;
+}
+.teamFacilities{
+    overflow: hidden;
+    margin-bottom: 15px;
+}
+.teamFacilities ul li a i{
+    font-size: 12px;
+    color: #444;
+    width: 20px;
+}
+.teamContactBtn a{
+    background:  rgb(39, 12, 12);
+    color: white;
+    padding: 15px;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 15px;
+    display: block;
+    width: 120px;
+    text-align: center;
+    border-radius: 5px;
+}
+.teamContactBtn a{
+    color: white;
+}
+.teamFacilities ul li:hover a{
+    color: #fb5200;
+}
+.teamFacilities ul li:hover i{
+    color: #fb5200;
+}
+.teamContactBtn a:hover {
+    color: #fb5200
+}
+#ourTeam{
+   background-color: whitesmoke;
+}
+#whyChoseUs{
+    background-image: url(https://png.pngitem.com/pimgs/s/149-1492667_transparent-texture-background-png-white-texture-background-hd.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+.iconWrapper{
+    overflow: hidden;
+    
+}
+.singleIcons{
+    width: 210px;
+    text-align: center;
+    color: black;
+    float: left;
+    margin-right: 100px;
+}
+.sIcon{
+    font-size: 40px;
+}
+.singleIcons h2{
+    font-size: 55px;
+    font-weight:  900;
+    margin: 10px 0px;
+    font-family: arial black;
+}
+.singleIcons{
+    font-size: 22px;
+}
+.singleIcons:last-child{
+    margin-right: 0px;
+}
+.secTitle{
+    text-align: center;
+    margin-bottom: 20px;
+}
+.secTitle h2{
+      font-size: 45px;
+      margin-bottom: 10px;
+      position: relative;
+      padding-bottom: 2px;
+}
+.secTitle h2:after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    background: #fb5200;
+    width: 100px;
+    border-bottom: 3px solid #fb5200;
+    left: 50%;
+    margin-left: -50px;
+}
+.secTitle p{
+     width: 650px;
+     margin: auto;
+     line-height: 25px;
+     font-size: 17px;
+     color: #666;
+}
+.teamPersons{
+    overflow: hidden;
+}
+.singlePerson{
+    margin-right: 30px;
+    width: 250px;
+    overflow: hidden;
+    float: left;
+}
+.singlePerson:last-child{
+     margin-right: 0px;
+}
+.singlePerson img{
+      width: 100%;
+       height: 250px; 
+       transition: 0.3s;
+}
+.personinfo{
+    padding: 22px 15px;
+    text-align: center;
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+}
+.personinfo h3{
+font-size: 18px;
+}
+.personinfo p{
+    font-size: 14px;
+    margin-top: 8px;
+    color: #777;
+}
+.joinTeamButton{
+    margin-top: 70px;
+    display: grid;
+    place-items: center;
+}
+.joinTeamButton button {
+    background: rgb(39, 12, 12);
+    color: white;
+    border: none;
+    padding: 15px 20px;
+    font-family: oswald;
+    letter-spacing: 1;
+    font-size: 18px;
+    border-radius: 4px;
+    transition: .3s;
+    cursor: pointer;
+}
+.joinTeamButton button:hover{
+      color:#fb5200;
+      background: #333;
+}
+.personImg{
+    overflow: hidden;
+    position: relative;
+    
+}
+
+.socialIcons {
+    width: 270px;
+    position: absolute;
+    bottom: 30px;
+    text-align: center;
+   
+}
+.socialIcons a {
+    width: 20px;
+    height: 20px;
+    float: left;
+    overflow: hidden;
+    background: white;
+    place-items: center;
+    text-decoration: none;
+    border-radius: 100%;
+    padding: 5px;
+    color: white;
+    margin: 15px;
+    transition: .3s;
+
+}
+.socialIcons a:first-child {
+       background: #db4a39;
+       opacity:0;
+       transition: .90s;
+}
+.socialIcons a:nth-child(2) {
+    background: #00acee;
+    opacity:0;
+    transition: .70s;
+}
+.socialIcons a:nth-child(3) {
+    background: #3b5998;
+    opacity:0;
+    transition: .50s;
+}
+.socialIcons a:last-child {
+    background:#0e76a8;
+    opacity:0;
+    transition: .30s;
+}
+.socialIcons a:hover{
+    background: whitesmoke;
+    color: #333;
+}
+.singlePerson:hover .socialIcons a:first-child {
+    transform: translateY(20px);
+    opacity: 1;
+}
+.singlePerson:hover .socialIcons a:nth-child(2){
+    transform: translateY(20px);
+    opacity: 1;
+}
+.singlePerson:hover .socialIcons a:nth-child(3) {
+    transform: translateY(20px);
+    opacity: 1;
+}
+.singlePerson:hover .socialIcons a:last-child {
+    transform: translateY(20px);
+    opacity: 1;
+}
+.singlePerson:hover .personImg img{
+    transform: scale(1.1);
+}
+.singlePerson:hover{
+    cursor:pointer;
+}
+#footer{
+    background: #1a1a1a;
+    padding-top: 200px;
+    height: min-content;
+}
+.copyrightContainer{
+    overflow: hidden;
+    color: #999;
+    border-top: 1px solid #333;
+}
+.copyrightContainer .container{
+    overflow: hidden;
+}
+.copyrightText{
+    width: 540px;
+    float: left;
+    padding: 25px 0;
+}
+.copyrightMenu{
+    width: 570px;
+    float: right;
+}
+.copyrightMenu ul{
+        list-style: none;
+        float: right;
+        overflow: hidden;
+}
+.copyrightMenu ul li{
+    float: left;
+}
+.copyrightMenu ul li a{
+        color: #999;
+        display: block;
+        padding: 25px 15px;
+        text-decoration: none;
+}
+.fboxWrapper{
+    overflow: hidden;
+    margin-bottom: 60px;
+}
+.fbox{
+    overflow: hidden;
+    width: 250px;
+    float: left;
+    margin-right: 30px;
+    color: #999;
+}
+.fbox:last-child{
+    margin-right: 0px;
+}
+.fbox h3{
+    color: white;
+    margin-bottom: 18px;
+}
+.fbox p{
+  line-height: 23px;
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+span#contacts{
+    display: block;
+    margin-bottom: 15px;
+    font-size: 16px;
+}
+span#contacts i{
+    color: #fb5200;
+    margin-right: 10px;
+}
+.fRpost{
+    overflow: hidden;
+    margin-bottom: 30px;
+}
+.fRpostTitle {
+    width: 70px;
+    background: #313131;
+    padding: 10px;
+    border-radius: 3px;
+    color: white;
+    float: left;
+}
+.fRpostTitle {
+    width: 175px;
+    float: right;
+}
+.fRpostTitle h3{
+    margin: o;
+     margin-bottom: 10px;
+     font-size: 16px;
+}
+.fRpostTitle a{
+    color: #999;
+    text-decoration: none;
+    font-size: 12px;
+    margin-right: 10px;
+}
+.fRpostTitle{
+   text-align: center;
+}
+.ficons a{
+    display: block;
+    width: 20px;
+    background: #666;
+    display: grid;
+    place-items: center;
+    padding: 5px;
+    float: left;
+    margin-right: 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    color: white;
 }
